--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -21,6 +21,12 @@
 .overlay h1 {
   font-size: 2rem;
   padding-bottom: 10px;
+  white-space: normal; /* 줄바꿈 허용 */
+  overflow: hidden; /* 넘치는 텍스트를 숨김 */
+  text-overflow: ellipsis; /* 말줄임표 추가 */
+  display: -webkit-box; /* Flexbox로 2줄 제한 */
+  line-clamp: 2; /* 최대 2줄까지만 표시 */
+  -webkit-box-orient: vertical; /* 수직 방향으로 설정 */
 }
 .overlay div {
   text-align: center;
